Bug #11314 SELECT GROUP HAVING DEFAULT(a) hangs
Submitted: 14 Jun 2005 12:41 Modified: 14 Jun 2005 15:16
Reporter: Alexey Botchkov Email Updates:
Status: Closed
Category:Server Severity:S2 (Serious)
Version:5.0 OS:
Assigned to: Alexey Botchkov Target Version:

[14 Jun 2005 12:41] Alexey Botchkov
Description:
If one tries to get DEFAULT value of an expression (which isn't legal) mysql client hangs
instead of returning an error.

How to repeat:
CREATE TABLE t1 (s varchar(20), id int(11));
INSERT INTO t1 VALUES (1, 'one'), (2, 'two'), (3, 'three');
SELECT s, 32 AS mi FROM t1 GROUP BY s HAVING DEFAULT(mi) IS NULL;
[14 Jun 2005 12:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25975
[14 Jun 2005 13:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25976
[14 Jun 2005 15:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25981
[14 Jun 2005 15:16] Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html