Final patch to the bug #11314 (HAVING DEFAULT hangs)